--- a/Planetary boundaries - paper figures.ipynb
+++ b/Planetary boundaries - paper figures.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -118,11 +118,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Aerosols</th>\n",
-       "      <td>2.012666</td>\n",
-       "      <td>2.061741</td>\n",
-       "      <td>1.927661</td>\n",
-       "      <td>1.694579</td>\n",
-       "      <td>1.259313</td>\n",
+       "      <td>1.800000</td>\n",
+       "      <td>1.833333</td>\n",
+       "      <td>1.646667</td>\n",
+       "      <td>1.406667</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ocean&lt;br&gt;acidification</th>\n",
@@ -149,7 +149,7 @@
        "Scenario Name                                                             \n",
        "SSP1     Climate<br>change       0.514000  1.825273  2.455273  2.962364   \n",
        "         Stratospheric<br>ozone  0.157970  0.902687  0.599751  0.326132   \n",
-       "         Aerosols                2.012666  2.061741  1.927661  1.694579   \n",
+       "         Aerosols                1.800000  1.833333  1.646667  1.406667   \n",
        "         Ocean<br>acidification  0.455601  0.813883  0.989778  1.477498   \n",
        "         Nitrogen<br>balance     1.337535  2.602917  2.603702  2.452318   \n",
        "\n",
@@ -157,12 +157,12 @@
        "Scenario Name                              \n",
        "SSP1     Climate<br>change       4.014636  \n",
        "         Stratospheric<br>ozone  0.157970  \n",
-       "         Aerosols                1.259313  \n",
+       "         Aerosols                     NaN  \n",
        "         Ocean<br>acidification  2.405665  \n",
        "         Nitrogen<br>balance     2.414548  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,18 +174,8 @@
     "    pb_values_raw = pb_values_raw.replace(index_rename_map).drop(columns='Region').set_index(['Scenario', 'Name'])\n",
     "    return pb_values_raw\n",
     "\n",
-    "pb_values_raw = load_data('Data/summary - 20240529.xlsx')\n",
-    "# pb_values_raw = load_data('Data/summary - 20240703.xlsx')\n",
+    "pb_values_raw = load_data('Data/summary.xlsx')\n",
     "pb_values_raw.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pb_values_raw_old = load_data('Data/summary - 20240529.xlsx')"
    ]
   },
   {
