--- a/general_pb_fig/dummy_pb_fig.ipynb
+++ b/general_pb_fig/dummy_pb_fig.ipynb
@@ -9337,7 +9337,9 @@
     "# Add same subplot as before\n",
     "extra_layout = add_pb_subplot(dummy_data, 2050, fig2, show_safety_grid=False)\n",
     "\n",
-    "# Add lines for other scenarios/years (here: 1970 and 2015)\n",
+    "# Add lines for other scenarios/years (by specifying the columns `1970` and `2015`)\n",
+    "# Note that you have to specify all the columns you want to show at once, since\n",
+    "# the function will calculate the overlaps for you and split the lines if there is too much overlap\n",
     "add_pb_subplot_lines(dummy_data.loc[:,[1970, 2015]], fig2, colors=['mediumvioletred', 'blue'], dashes=['solid', '2px 2px'], show_safety_grid=False, showbg=False)\n",
     "\n",
     "fig2.update_layout(\n",
